url preview: Fix CSS to make url preview titles clickable.
06f3cb2b78ffcd29bd2742bd03a374871f3fab36 added some styling to make the
embed previews prettier, and in particular added a bottom fading gradient to
make the embed description text fade out slowly, when it is out of bounds.
The fading used an ::after pseudo-element which had 100% height of the
`.data-container` which contained the title and the description of the
preview. This pseudo-element got overlaid on the title and made it
un-clickable.

This commit retains the visual appearance of the fade, while reducing the
height of the ::after pseudo element, so that it never gets overlaid on the
title, keeping it clickable always.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -1626,10 +1626,10 @@ a:hover code {
             content: " ";
             position: absolute;
             width: 100%;
-            height: 100%;
-            top: 0;
+            height: 10%;
+            bottom: 0;
 
-            background: linear-gradient(0deg, hsl(0, 0%, 100%), transparent 10%);
+            background: linear-gradient(0deg, hsl(0, 0%, 100%), transparent 100%);
         }
     }
 
